2001-06-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/AudioOptions_gump.cc: removed SFX conversion option
	* exultmenu.cc: same for Exult setup menu
	* ucmachine.cc: set party flag on avatar (for spells like magic storm)

2001-06-12  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc, audio/midi_drivers/win_midiout.cc : Changes to make
	  Exult SMP safe in Win32.

2001-06-12  Tristan Tarrant  <nadir@users.sourceforge.net>
	* configure.in: HAVE_GLADE is false if no GTK available

>>>>>>> 1.708
2001-06-12  Jeff Freedman  <jeff@amy.nerble.net>
	* shapes: SFX fields read from weapons.dat.
	* combat.cc,actors.cc: Play weapon SFX.
	* actors.cc,gamewin.cc:  Flash red outline when injured.

2001-06-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* actors.*, keyactions.cc: double clicking avatar shows inventory again
	* gumps/gump_types.h: extracted Gumpshapefile to a header file
	* gamewin.cc, gumps/Gump.cc, gumps/Gump_widget.*, gumps/gump_types.h:
	added paperdol.vga to the Gumpshapefile enum
	* gumps/Gump_button.h, gumps/Face_button.*: a face that opens 
	inventory when double clicked
	* gumps/Gump.cc, gumps/CombatStats_gump.*: the SI combat stats gump
	* keyactions.*, keys.*, defaultkeys.txt: 'L' = show combat stats
	* shapeid.h: removed some outdated comments
	* gumps/Gump_ToggleButton.h: made toggle() purely virtual
	* gumps/Paperdoll_gump.h: made GetCharacterInfo, GetItemInfo public
	* gumps/misc_buttons.cc: implemented the combat stats button
	

2001-06-08  Ryan Nunn <triforce@merlin.net.au>
	* exult.cc, keyactions.cc, mouse.h: When gumps are open, the cursor
	  will now only be the hand when the mouse is actually over a gump.

2001-06-08  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc : Volume curve now modifies Volume Controller events as
	  well as Note On Velocity values. Volume Curve now has a greater
	  impact and works "better". The difference is anything but subtle in
	  some songs.
