@@ -1,3 +1,8 @@
+2001-06-13  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Several: 'opponent' from Combat_schedule is now 'target' in
+	Actor. This fixes bug where combat started automatically.
+
 2001-06-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* gumps/AudioOptions_gump.cc: removed SFX conversion option
 	* exultmenu.cc: same for Exult setup menu
